fix login bug; change formatting for readability.

--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -33,10 +33,10 @@ a:hover {
 }
 div .form {
   padding: 5%;
-  width: 65%;
+  width: 70%;
   margin-left: 1%;
   border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 h1 {
   text-align: center;
@@ -110,5 +110,7 @@ div .recommend {
   margin-left: 1%;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.4);
-
+}
+#new-user-link {
+  color: white;
 }
